# resume_generator

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  res_maker.py  resume_data.json  zappa_settings.json
Models/: job.py  job_applicaton.py  resume.py  user.py
Models/AI/: claude_client.py  groq_client.py  llm_base.py  openai_client.py
Operations/: prompt_operations.py  resume_operations.py
Services/: ai_client_service.py  resume_service.py  user_service.py
data/: karthik_resume.py  mohith_resume.py  prudhvi_resume.py  revanth_resume.py  varshith_resume.py  viswa_resume.py
keys/: google.json
tests/: conftest.py  test_resume_data.py  test_resume_generation.py
tests/test_user_data.py/: test_user_data_import.py
